--- a/app/views/todo_items/_todo_item.html.erb
+++ b/app/views/todo_items/_todo_item.html.erb
@@ -1,23 +1,38 @@
-<div class="row clearfix">
-    <% if todo_item.completed? %>
-        <div class="complete">
-            <%= link_to "Mark as complete", complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch %>
+<% if todo_item.completed? %>
+    	<div class="row tasks">
+    	    <div class="col-sm-1 col-xs-1"></div>
+            <div class="col-md-3 col-sm-3 col-xs-3 complete">
+    			<%= link_to complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch do %>
+    				<i style="opacity: 0.4;" class="fa fa-check"></i>
+    			<% end %>
+    		</div>
+    		<div class="col-md-6 col-sm-4 col-xs-4 task_desciption">
+    			<p style="opacity: 0.4;"><strike><%= todo_item.content %></strike></p>
+    		</div>
+    		<div class="col-md-3 col-sm-3 col-xs-3 delete">
+    			<%= link_to todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: "Are you sure?" } do %>
+    				<i class="fa fa-trash"></i>
+    			<% end %>
+    		</div>
+    		<div class="col-sm-1 col-xs-1"></div>
         </div>
-        <div class="todo_item">
-            <p style="opacity: 0.4;"><strike><%= todo_item.content %></strike></p>
-        </div>
-        <div class="trash">
-            <%= link_to "Delete",  todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: "Are you sure?" } %>
-        </div>
-    <% else %>
-        <div class="complete">
-            <%= link_to "Mark as complete", complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch %>
-        </div>
-        <div class="todo_item">
-            <p><%= todo_item.content %></p>
-        </div>
-        <div class="trash">
-            <%= link_to "Delete",  todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: "Are you sure?" } %>
-        </div>
-    <% end %>
-</div>
+		
+	<% else %>
+    	<div class="row tasks">
+    		<div class="col-sm-1 col-xs-1"></div>
+            <div class="col-md-3 col-sm-3 col-xs-3 complete">
+    			<%= link_to complete_todo_list_todo_item_path(@todo_list, todo_item.id), method: :patch do %>
+    				<i class="fa fa-check"></i>
+    			<% end %>
+    		</div>
+    		<div class="col-md-6 col-sm-4 col-xs-4 task_desciption">
+    			<p><%= todo_item.content %></p>
+    		</div>
+    		<div class="col-md-3 col-sm-3 col-xs-3 delete">
+    			<%= link_to todo_list_todo_item_path(@todo_list, todo_item.id), method: :delete, data: { confirm: "Are you sure?" } do %>
+    				<i class="fa fa-trash"></i>
+    			<% end %>
+    		</div>
+    		<div class="col-sm-1 col-xs-1"></div>
+    	</div>
+	<% end %>
