--- a/app/views/todo_lists/_form.html.erb
+++ b/app/views/todo_lists/_form.html.erb
@@ -1,25 +1,26 @@
 <%= form_for(@todo_list) do |f| %>
-  <% if @todo_list.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@todo_list.errors.count, "error") %> prohibited this todo_list from being saved:</h2>
+    <% if @todo_list.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@todo_list.errors.count, "error") %> prohibited this todo_list from being saved:</h2>
+  
+        <ul>
+        <% @todo_list.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
 
-      <ul>
-      <% @todo_list.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+    <div class="form-group title">
+      <%= f.label :title, class:"form_title" %><br>
+      <%= f.text_field :title, class: 'form-control' %>
+    </div>
+    <div class="form-group title">
+      <%= f.label :description, class:"form_description" %><br>
+      <%= f.text_area :description, class: 'form-control' %>
+    </div>
+    <div class="actions">
+      <%= f.submit "Add new", class: 'btn btn-default btn_new' %>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+  
