--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -1,29 +1,18 @@
-<p id="notice"><%= notice %></p>
+  <div class="row content">
+    <div class="col-sm-1 col-xs-1"></div>
+     <div class="col-md-12 col-sm-10 col-xs-10 text">
+      <% @todo_lists.each do |todo_list| %>
+        <h2 class="todo_list_title"><%= link_to todo_list.title, todo_list %></h2>
+        <p class="todo_list_sub_title"><%= todo_list.description %></p>
+      <% end %>
+    </div>
+    <div class="col-sm-1 col-xs-1"></div>
+  </div>
+  
+  <div class="row btn">
+    <div class="col-md-12 add">
+          <%= link_to "New List", new_todo_list_path, class: "btn btn-primary" %>
+    </div>
+  </div>
 
-<h1>Listing Todo Lists</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @todo_lists.each do |todo_list| %>
-      <tr>
-        <td><%= todo_list.title %></td>
-        <td><%= todo_list.description %></td>
-        <td><%= link_to 'Show', todo_list %></td>
-        <td><%= link_to 'Edit', edit_todo_list_path(todo_list) %></td>
-        <td><%= link_to 'Destroy', todo_list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Todo list', new_todo_list_path %>
