--- a/app/views/todo_lists/new.html.erb
+++ b/app/views/todo_lists/new.html.erb
@@ -1,5 +1,21 @@
-<h1>New Todo List</h1>
+<div class="container">
+  <div class="row content">
+      <div class="col-md-1"></div>
+      <div class="col-md-10 form_new_list">
+        <h1>New List</h1>
+        <%= render 'form' %>
+    
+      </div>
+      <div class="col-md-1"></div>
+  </div>
+  
+  <div class="row form_options"> 
+    <div class="col-md-5"></div>
+    <div class="col-md-2">
+      <div class="btn btn-primary form_btn_option"><i class="fa fa-reply form_option_icon"></i><%= link_to 'Back', todo_lists_path %></div>
+    </div>
+    <div class="col-md-5"></div>
+  </div>
+  
+</div>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', todo_lists_path %>
