--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -240,6 +240,9 @@ body{
         }
         
         .options{
+            .col-md-2 {
+                padding-top: 0.5em;
+            }
             a{
                 text-decoration:none;
                 color: $white;
@@ -308,3 +311,4 @@ body{
         }
     }
 }
+
