--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -16,13 +16,14 @@
 <div class="row options">
   <div class="col-md-3 col-sm-3 "></div>
   <div class="col-md-2 col-sm-2 col-xs-12">
-    <div class="btn btn-primary btn_option"><i class="fa fa-pencil-square-o option_icon"></i><%= link_to 'Edit', edit_todo_list_path(@todo_list) %></div>
+    <div><%= link_to 'Edit', edit_todo_list_path(@todo_list), class: "btn btn-primary btn_option" %></div>
   </div>
   <div class="col-md-2 col-sm-2 col-xs-12">
-    <div class="btn btn-primary btn_option"><i class="fa fa-trash option_icon"></i><%= link_to 'Delete', todo_list_path(@todo_list), method: :delete, data: { confirm: "Are you sure?"} %></div>
+    <div><%= link_to 'Delete', todo_list_path(@todo_list),  class: "btn btn-primary btn_option", method: :delete, data: { confirm: "Are you sure?"} %></div>
   </div>
   <div class="col-md-2 col-sm-2 col-xs-12">
-    <div class="btn btn-primary btn_option"><i class="fa fa-reply option_icon"></i><%= link_to 'Back', todo_lists_path %></div>
+    <%= link_to 'Back', todo_lists_path, class:"btn btn-primary btn_option" %>
+  </div>
   </div>
   <div class="col-md-3 col-sm-3 "></div>
 </div>
