--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
 
 <div class="jumbotron">
   <div class="container">
+    <% flash.each do |name, msg| %>
+  			<%= content_tag(:div, msg, class: "alert") %>
+  		<% end %>
+    
     <div class="row">
       <div class="col-md-4"></div>
       <div class="col-md-4">
