--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -12,6 +12,7 @@
   <div class="row btn">
     <div class="col-md-12 add">
           <%= link_to "New List", new_todo_list_path, class: "btn btn-primary" %>
+          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
     </div>
   </div>
 
