--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,18 +1,15 @@
-<div class="container">
-<p>Beat your procrastination using DoMore apps to make better results</p>
+<div class="welcome_container">
+    <p>Beat your procrastination using DoMore apps to make better results</p>
 
-<div class="row edit_options"> 
-<div class="col-md-4">
-    <%= link_to "Log in", new_user_session_path,  class: "btn btn-primary btn_option_edit" %>
-</div>
-<div class="col-md-4">
-    <%= link_to "Sign in", new_user_registration_path,  class: "btn btn-primary btn_option_edit" %>
-</div>
-<div class="col-md-4">
-    <%= link_to "Log out", destroy_user_session_path, method: :delete,  class: "btn btn-primary btn_option_edit" %>
-</div>
-
-
-
-</div>
+    <div class="row edit_options"> 
+        <div class="col-md-4">
+            <%= link_to "Log in", new_user_session_path,  class: "btn btn-primary btn_option_edit" %>
+        </div>
+        <div class="col-md-4">
+            <%= link_to "Sign in", new_user_registration_path,  class: "btn btn-primary btn_option_edit" %>
+        </div>
+        <div class="col-md-4">
+            <%= link_to "Log out", destroy_user_session_path, method: :delete,  class: "btn btn-primary btn_option_edit" %>
+        </div>
+    </div>
 </div>
