--- a/app/views/todo_lists/new.html.erb
+++ b/app/views/todo_lists/new.html.erb
@@ -12,7 +12,7 @@
   <div class="row form_options"> 
     <div class="col-md-5"></div>
     <div class="col-md-2">
-      <div class="btn btn-primary form_btn_option"><i class="fa fa-reply form_option_icon"></i><%= link_to 'Back', todo_lists_path %></div>
+      <div class="btn btn-primary form_btn_option"><%= link_to 'Back', todo_lists_path %></div>
     </div>
     <div class="col-md-5"></div>
   </div>
