--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -10,9 +10,11 @@
   </div>
   
   <div class="row btn">
-    <div class="col-md-12 add">
-          <%= link_to "New List", new_todo_list_path, class: "btn btn-primary" %>
-          <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+    <div class="col-lg-4 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm-6 col-xs-12 add">
+      <%= link_to "New List", new_todo_list_path, class: "btn btn-primary btn_option_edit" %>
+    </div>
+    <div class="col-lg-4 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm-6 col-xs-12 add">
+      <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "btn btn-primary btn_option_edit" %>
     </div>
   </div>
 
