--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,11 +1,11 @@
 <div class="welcome_container">
     <p>Beat your procrastination using DoMore apps to make better results</p>
 
-    <div class="row edit_options"> 
-        <div class="col-md-6">
+    <div class="row edit_options">
+        <div class="col-sm-4 col-sm-offset-1 col-xs-8 col-xs-offset-2">
             <%= link_to "Log in", new_user_session_path,  class: "btn btn-primary btn_option_edit" %>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-4 col-sm-offset-1 col-xs-8 col-xs-offset-2">
             <%= link_to "Sign in", new_user_registration_path,  class: "btn btn-primary btn_option_edit" %>
         </div>
     </div>
