--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -1,6 +1,6 @@
   <div class="row content">
     <div class="col-sm-1 col-xs-1"></div>
-     <div class="col-lg-12 col-md-12 col-sm-10 col-xs-10 text">
+     <div class="col-sm-10 col-xs-10 text">
       <% @todo_lists.each do |todo_list| %>
         <h2 class="todo_list_title"><%= link_to todo_list.title, todo_list %></h2>
         <p class="todo_list_sub_title"><%= todo_list.description %></p>
@@ -8,14 +8,12 @@
     </div>
     <div class="col-sm-1 col-xs-1"></div>
   </div>
-  
+
   <div class="row btn">
-    <div class="col-lg-4 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm-6 col-xs-12 add">
+    <div class="col-sm-4 col-sm-offset-1 col-xs-8 col-xs-offset-2 add">
       <%= link_to "New List", new_todo_list_path, class: "btn btn-primary btn_option_edit" %>
     </div>
-    <div class="col-lg-4 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm-6 col-xs-12 add">
+    <div class="col-sm-4 col-sm-offset-1 col-xs-8 col-xs-offset-2 add">
       <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "btn btn-primary btn_option_edit" %>
     </div>
   </div>
-
-
