--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -37,13 +37,16 @@ body{
 }
 
 label{
-    	visibility: visible;
+    visibility: visible;
 }
 
 .jumbotron{
     background-color: $dark;
     margin:0;
     .container{
+        .col-sm-4.col-sm-offset-1.col-xs-8.col-xs-offset-2{
+            margin: 0;
+        }
         .form_header{
             padding: .7em 0 1em 0;
         }/*form_header*/
@@ -156,6 +159,8 @@ label{
 
         .btn{
             .add{
+                margin:0;
+                width:100%;
                 .btn-primary{
                     background-color: $dark;
                     border: 2px solid $blue;
@@ -327,7 +332,6 @@ label{
                 font-size: 1.3em;
                 border-radius: 40px;
                 margin-bottom: .5em;
-                width:100%;
                 height:2em;
                 font-weight:100;
                 display: flex;
@@ -411,6 +415,11 @@ label{
 @media screen and (max-width: 550px) {
  .jumbotron{
      .container{
+         .actions{
+             .reset{
+                 font-size: 1.2em; 
+             }
+         }
          .content{
              .text{
                  font-size: 70%;
@@ -460,6 +469,18 @@ label{
                      font-size:2em;
                      float: center;
                  }
+             }
+         }
+     }
+ }
+}
+
+@media screen and (max-width: 380px) {
+ .jumbotron{
+     .container{
+         .actions{
+             .reset{
+                 font-size: 0.8em; 
              }
          }
      }
