--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions", class: 'btn btn-primary submit_button' %>
+    <%= f.submit "Send me reset password instructions", class: 'btn btn-primary submit_button reset' %>
   </div>
 <% end %>
 
