--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,6 +27,10 @@ html{
     height: 100vh;
 }
 
+input{
+    color: #000;
+}
+
 body{
     font-family: 'Open Sans', sans-serif;
     text-align: center;
